ajout des filtres

--- a/index.html
+++ b/index.html
@@ -46,153 +46,199 @@
 <!--/ S W I P E R-->
 
 <!-- G A L E R I E-->
-    <div class="section section-2" id="Galerie">
-        <div id="containerGalerie">
-            <div id="calendar">
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/1.jpg" data-lightbox="art" data-title="Caption1">
-                        <img src="images/1.jpg">
-                    </a>
+<div class="section section-2" id="Galerie">
+    <div class="section-filter">
+        <ul>
+            <li class="list active" data-filter="all">Tous</li>
+            <li class="list" data-filter="expoPerma">Exposition permanente</li>
+            <li class="list" data-filter="expoEph1">Exposition éphémère [Salle 1]</li>
+            <li class="list" data-filter="expoEph2">Exposition éphémère [Salle 2]</li>
+            <li class="list" data-filter="expoEph3">Exposition éphémère [Salle 3]</li>
+        </ul>
+    </div>
+
+    <div id="containerGalerie">
+        <div id="calendar">
+    
+            <div class="itemBox expoPerma">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/1.jpg" data-lightbox="art" data-title="Caption1">
+                            <img src="images/1.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/2.jpg" data-lightbox="art" data-title="Caption2">
-                        <img src="images/2.jpg">
-                    </a>
+            <div class="itemBox expoEph1">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/2.jpg" data-lightbox="art" data-title="Caption2">
+                            <img src="images/2.jpg">   
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/3.jpg" data-lightbox="art" data-title="Caption3">
-                        <img src="images/3.jpg">
-                    </a>
+            <div class="itemBox expoEph2">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/3.jpg" data-lightbox="art" data-title="Caption3">
+                            <img src="images/3.jpg">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="itemBox expoEph3">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/4.jpg" data-lightbox="art" data-title="Caption4">
+                            <img src="images/4.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/4.jpg" data-lightbox="art" data-title="Caption4">
-                        <img src="images/4.jpg">
-                    </a>
+            <div class="itemBox expoPerma">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/5.jpg" data-lightbox="art" data-title="Caption5">
+                            <img src="images/5.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/5.jpg" data-lightbox="art" data-title="Caption5">
-                        <img src="images/5.jpg">
-                    </a>
+            <div class="itemBox expoEph1">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/6.jpg" data-lightbox="art" data-title="Caption6">
+                            <img src="images/6.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/6.jpg" data-lightbox="art" data-title="Caption6">
-                        <img src="images/6.jpg">
-                    </a>
+            <div class="itemBox expoEph2">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/7.jpg" data-lightbox="art" data-title="Caption7">
+                            <img src="images/7.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/7.jpg" data-lightbox="art" data-title="Caption7">
-                        <img src="images/7.jpg">
-                    </a>
+            <div class="itemBox expoEph3">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/8.jpg" data-lightbox="art" data-title="Caption8">
+                            <img src="images/8.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/8.jpg" data-lightbox="art" data-title="Caption8">
-                        <img src="images/8.jpg">
-                    </a>
+            <div class="itemBox expoPerma">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/9.jpg" data-lightbox="art" data-title="Caption9">
+                            <img src="images/9.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/9.jpg" data-lightbox="art" data-title="Caption9">
-                        <img src="images/9.jpg">
-                    </a>
+            <div class="itemBox expoEph1">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/10.jpg" data-lightbox="art" data-title="Caption10">
+                            <img src="images/10.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/10.jpg" data-lightbox="art" data-title="Caption10">
-                        <img src="images/10.jpg">
-                    </a>
+            <div class="itemBox expoEph2">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/11.jpg" data-lightbox="art" data-title="Caption11">
+                            <img src="images/11.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/11.jpg" data-lightbox="art" data-title="Caption11">
-                        <img src="images/11.jpg">
-                    </a>
+            <div class="itemBox expoEph3">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/12.jpg" data-lightbox="art" data-title="Caption12">
+                            <img src="images/12.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/12.jpg" data-lightbox="art" data-title="Caption12">
-                        <img src="images/12.jpg">
-                    </a>
+            <div class="itemBox expoPerma">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/13.jpg" data-lightbox="art" data-title="Caption13">
+                            <img src="images/13.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/13.jpg" data-lightbox="art" data-title="Caption13">
-                        <img src="images/13.jpg">
-                    </a>
+            <div class="itemBox expoEph1">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/14.jpg" data-lightbox="art" data-title="Caption14">
+                            <img src="images/14.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/14.jpg" data-lightbox="art" data-title="Caption14">
-                        <img src="images/14.jpg">
-                    </a>
+            <div class="itemBox expoEph2">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/15.jpg" data-lightbox="art" data-title="Caption15">
+                            <img src="images/15.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/15.jpg" data-lightbox="art" data-title="Caption15">
-                        <img src="images/15.jpg">
-                    </a>
+            <div class="itemBox expoEph3">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/16.jpg" data-lightbox="art" data-title="Caption16">
+                            <img src="images/16.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/16.jpg" data-lightbox="art" data-title="Caption16">
-                        <img src="images/16.jpg">
-                    </a>
+            <div class="itemBox expoPerma">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/17.jpg" data-lightbox="art" data-title="Caption17">
+                            <img src="images/17.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/17.jpg" data-lightbox="art" data-title="Caption17">
-                        <img src="images/17.jpg">
-                    </a>
+            <div class="itemBox expoEph1">
+                <div class="window">
+                    <div class="img-box">
+                        <a href="images/18.jpg" data-lightbox="art" data-title="Caption18">
+                            <img src="images/18.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
-
-            <div class="window">
-                <div class="img-box">
-                    <a href="images/18.jpg" data-lightbox="art" data-title="Caption18">
-                        <img src="images/18.jpg">
-                    </a>
-                </div>
-            </div>
-
+        
         </div>
     </div>
 </div>
@@ -235,7 +281,36 @@
 <!--/ S E C T I O N S-->
 
 <!-- S C R I P T S -->
-<!--EXPOS -->
+
+
+<!--GALERIE -->
+<!--FILTER -->
+<script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('.list').click(function(){
+            const value = $(this).attr('data-filter');
+            if (value == 'all'){
+                $('.itemBox').show('1000');
+            }
+            else{
+                $('.itemBox').not('.'+value).hide('1000');
+                $('.itemBox').filter('.'+value).show('1000');
+            }
+        })
+
+        // ajouter active class sur l'item selectionné
+        $('.list').click(function(){
+            $(this).addClass('active').siblings().removeClass('active');
+        })
+    });
+</script>
+<!--/FILTER -->
+<!--/GALERIE -->
+
+
+
 <footer>
         <script>
         const containerExpos = document.querySelector(".containerExpos");
