--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS/styles.css" rel="stylesheet">
-    <link href="CSS/box.css" rel="stylesheet" >
-    <link href="CSS/slider.css" rel="stylesheet" >
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/box.css" rel="stylesheet" >
+    <link href="css/slider.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <title>Le Lez'art</title>
 </head>
@@ -359,6 +359,6 @@
   </script>
 
  <!-- Lightbox JS -->
-<script src="lightbox-plus-jquery.min.js"></script>
+<script src="js/lightbox-plus-jquery.min.js"></script>
     
 </footer>
