--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <nav>
 
             <ul>
-                <div id="logo">
-                    Lez'art
-                  </div>
+
+                <div id="logo">Lez'art</div> <!-- LOGO -->
                 <li><a href="#Accueil"><b>Accueil</b></a></li>
                 <li><a href="#Galerie"><b>Galerie</b></a></li>
                 <li><a href="#Expos"><b>Expos</b></a></li>
@@ -40,14 +39,16 @@
     <div class="section section-1" id="Accueil">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="images/1.jpg"></div>
-              <div class="swiper-slide"><img src="images/2.jpg"></div>
-              <div class="swiper-slide"><img src="images/3.jpg"></div>
-              <div class="swiper-slide"><img src="images/4.jpg"></div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+
+                    <div class="swiper-slide"><img src="images/7.jpg"></div>
+                    <div class="swiper-slide"><img src="images/16.jpg"></div>
+                    <div class="swiper-slide"><img src="images/14.jpg"></div>
+                    <div class="swiper-slide"><img src="images/15.jpg"></div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
         </div> 
     </div> 
 <!--/ S W I P E R-->
