navbar responsivité corrigé

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <!-- N A V B A R -->
 
         <nav>
-
+            <div id="logo">Lez'art</div> <!-- LOGO -->
             <ul>
 
-                <div id="logo">Lez'art</div> <!-- LOGO -->
+
                 <div class="btn-toggle">Go nuit</div>
                 <li><a href="#Accueil"><b>Accueil</b></a></li>
                 <li><a href="#Galerie"><b>Galerie</b></a></li>
@@ -289,7 +289,7 @@
                 <!-- Product Name -->
             <h1>Salle 1</h1>  
         <!-- Les informations importantes -->
-                <p class="information">Description principale de l'oeuvre en</p>      
+                <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
         <div class="control">    
         <!-- Début Button Réserver -->
@@ -328,7 +328,7 @@
                 <!-- Product Name -->
             <h1>Salle 2</h1>  
         <!-- Les informations importantes -->
-                <p class="information">Description principale de l'oeuvre en</p>      
+                <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
         <div class="control">    
         <!-- Début Button Réserver -->
@@ -367,7 +367,7 @@
                 <!-- Product Name -->
             <h1>Salle 3</h1>  
         <!-- Les informations importantes -->
-                <p class="information">Description principale de l'oeuvre en</p>      
+                <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
         <div class="control">    
         <!-- Début Button Réserver -->
