--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
     <title>Le Lez'art</title>
 </head>
 
-
-    <header>
-        <body class="light">
 <!-- N A V B A R -->
-
+<header>
+    <body class="light">
         <nav>
             <div id="logo">Lez'art</div> <!-- LOGO -->
             <ul>
 
 
-                <div class="btn-toggle">Go nuit</div>
+                <div class="btn-toggle">Dark</div>
                 <li><a href="#Accueil"><b>Accueil</b></a></li>
                 <li><a href="#Galerie"><b>Galerie</b></a></li>
                 <li><a href="#Expos"><b>Expos</b></a></li>
@@ -69,10 +67,10 @@
 
 
     <div id="containerGalerie">
-        <div id="calendar">
+        <div id="cardsGalerie">
     
             <div class="itemBox expoPerma">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/1.jpg" data-lightbox="art" data-title="Caption1">
                             <img src="images/1.jpg">
@@ -82,7 +80,7 @@
             </div>
 
             <div class="itemBox expoEph1">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/2.jpg" data-lightbox="art" data-title="Caption2">
                             <img src="images/2.jpg">   
@@ -92,7 +90,7 @@
             </div>
 
             <div class="itemBox expoEph2">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/3.jpg" data-lightbox="art" data-title="Caption3">
                             <img src="images/3.jpg">
@@ -101,7 +99,7 @@
                 </div>
             </div>
             <div class="itemBox expoEph3">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/4.jpg" data-lightbox="art" data-title="Caption4">
                             <img src="images/4.jpg">
@@ -111,7 +109,7 @@
             </div>
 
             <div class="itemBox expoPerma">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/5.jpg" data-lightbox="art" data-title="Caption5">
                             <img src="images/5.jpg">
@@ -121,7 +119,7 @@
             </div>
 
             <div class="itemBox expoEph1">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/6.jpg" data-lightbox="art" data-title="Caption6">
                             <img src="images/6.jpg">
@@ -131,7 +129,7 @@
             </div>
 
             <div class="itemBox expoEph2">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/7.jpg" data-lightbox="art" data-title="Caption7">
                             <img src="images/7.jpg">
@@ -141,7 +139,7 @@
             </div>
 
             <div class="itemBox expoEph3">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/8.jpg" data-lightbox="art" data-title="Caption8">
                             <img src="images/8.jpg">
@@ -151,7 +149,7 @@
             </div>
 
             <div class="itemBox expoPerma">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/9.jpg" data-lightbox="art" data-title="Caption9">
                             <img src="images/9.jpg">
@@ -161,7 +159,7 @@
             </div>
 
             <div class="itemBox expoEph1">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/10.jpg" data-lightbox="art" data-title="Caption10">
                             <img src="images/10.jpg">
@@ -171,7 +169,7 @@
             </div>
 
             <div class="itemBox expoEph2">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/11.jpg" data-lightbox="art" data-title="Caption11">
                             <img src="images/11.jpg">
@@ -181,7 +179,7 @@
             </div>
 
             <div class="itemBox expoEph3">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/12.jpg" data-lightbox="art" data-title="Caption12">
                             <img src="images/12.jpg">
@@ -191,7 +189,7 @@
             </div>
 
             <div class="itemBox expoPerma">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/13.jpg" data-lightbox="art" data-title="Caption13">
                             <img src="images/13.jpg">
@@ -201,7 +199,7 @@
             </div>
 
             <div class="itemBox expoEph1">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/14.jpg" data-lightbox="art" data-title="Caption14">
                             <img src="images/14.jpg">
@@ -211,7 +209,7 @@
             </div>
 
             <div class="itemBox expoEph2">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/15.jpg" data-lightbox="art" data-title="Caption15">
                             <img src="images/15.jpg">
@@ -221,7 +219,7 @@
             </div>
 
             <div class="itemBox expoEph3">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/16.jpg" data-lightbox="art" data-title="Caption16">
                             <img src="images/16.jpg">
@@ -231,7 +229,7 @@
             </div>
 
             <div class="itemBox expoPerma">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/17.jpg" data-lightbox="art" data-title="Caption17">
                             <img src="images/17.jpg">
@@ -241,7 +239,7 @@
             </div>
 
             <div class="itemBox expoEph1">
-                <div class="window">
+                <div class="windowGalerie">
                     <div class="img-box">
                         <a href="images/18.jpg" data-lightbox="art" data-title="Caption18">
                             <img src="images/18.jpg">
