--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/box.css" rel="stylesheet" >
-    <link href="css/slider.css" rel="stylesheet" >
-    <link href="css/event.css" rel="stylesheet" >
-    <link href="css/darkmode.css" rel="stylesheet" >
+    <link href="css/box.css" rel="stylesheet">
+    <link href="css/slider.css" rel="stylesheet">
+    <link href="css/event.css" rel="stylesheet">
+    <link href="css/darkmode.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Le Lez'art</title>
 </head>
 
@@ -403,9 +405,30 @@
         <h2>Lieu</h2>
    </div>
 
+<!-- C O N T A C T -->
     <div class="section section-5" id="Contact">
-        <h2>Contact</h2>
+        <div id="containerContact">
+            <!-- FACEBOOK -->
+            <a href="#" class="s3d facebook">
+                Facebook
+            <i class="fa-brands fa-square-facebook icons instagram"></i>  
+            </a>
+
+            <!-- TWITTER -->
+            <a href="#" class="s3d twitter">
+                Twitter
+                <i class="fa-brands fa-twitter icons twitter"></i>
+            </a>
+
+            <!-- INSTAGRAM -->
+            <a href="#" class="s3d instagram">
+                Instagram
+            <i class="fa-brands fa-instagram icons instagram"></i>  
+            </a>
+
+        </div>
    </div>
+<!--/ C O N T A C T -->
    
 </body>
 <!--/ S E C T I O N S-->
