--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <!-- N A V B A R -->
 <header>
+    <!-- DARK - LIGHT -->
     <body class="light">
         <nav>
             <div id="logo">Lez'art</div> <!-- LOGO -->
@@ -408,19 +409,19 @@
 <!-- C O N T A C T -->
     <div class="section section-5" id="Contact">
         <div id="containerContact">
-            <!-- FACEBOOK -->
+            <!-- FACEBOOK + LIEN -->
             <a href="https://facebook.com" target="_blank" class="s3d facebook">
                 Facebook
             <i class="fa-brands fa-square-facebook icons instagram"></i>  
             </a>
 
-            <!-- TWITTER -->
+            <!-- TWITTER + LIEN -->
             <a href="https://twitter.com" target="_blank" class="s3d twitter">
                 Twitter
                 <i class="fa-brands fa-twitter icons twitter"></i>
             </a>
 
-            <!-- INSTAGRAM -->
+            <!-- INSTAGRAM + LIEN  -->
             <a href="https://instagram.com" target="_blank" class="s3d instagram">
                 Instagram
             <i class="fa-brands fa-instagram icons instagram"></i>  
