dark mode revu, slider position corrigé

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/navbar.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/box.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
@@ -21,17 +22,17 @@
     <!-- DARK - LIGHT -->
     <body class="light">
         <nav>
-            <div id="logo">Lez'art</div> <!-- LOGO -->
+            <a href="#" class="logo">Lez'art</a>
             <ul>
-                <div class="btn-toggle">Dark</div>
-                <li><a href="#Accueil"><b>Accueil</b></a></li>
-                <li><a href="#Galerie"><b>Galerie</b></a></li>
-                <li><a href="#Expos"><b>Expos</b></a></li>
-                <li><a href="#Evenements"><b>Événements</b></a></li>
-                <li><a href="#Lieu"><b>Lieu</b></a></li>
-                <li><a href="#Contact"><b>Contact</b></a></li>
+            <li> <div class="btn-toggle"><a>Dark</a></div></li>
+              <li><a href="#Accueil">Accueil</a></li>
+              <li><a href="#Galerie">Galerie</a></li>
+              <li><a href="#Expos">Expo permanente</a></li>
+              <li><a href="#Evenements">Evénements</a></li>
+              <li><a href="#Lieu">Le lieu</a></li>
+              <li><a href="#Contact">Contact</a></li>
             </ul>
-        </nav>
+          </nav>
     </header> 
 <!--/ N A V B A R -->
 
@@ -409,7 +410,6 @@
 
 <!-- C O N T A C T -->
     <div class="section section-5" id="Contact">
-
 
 <!--F O R M -->
 <form action="traitement.php" method="post">
