--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/box.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
+    <link href="css/video.css" rel="stylesheet">
     <link href="css/event.css" rel="stylesheet">
     <link href="css/darkmode.css" rel="stylesheet">
     <link href="css/contact.css" rel="stylesheet">
@@ -36,25 +37,19 @@
     </header> 
 <!--/ N A V B A R -->
 
-<!-- S E C T I O N S-->
-
-<!-- S W I P E R-->
-
+<!-- S E C T I O N S [1]-->
+<!-- A C C U E I L -->
     <div class="section section-1" id="Accueil">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/7.jpg"></div>
-                    <div class="swiper-slide"><img src="images/6.jpg"></div>
-                    <div class="swiper-slide"><img src="images/5.jpg"></div>
-                    <div class="swiper-slide"><img src="images/2.jpg"></div>
-                    </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
-                </div>
-        </div> 
+        <div class="container-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WBwNw4WjV7g" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
     </div> 
-<!--/ S W I P E R-->
+<!--[X] A C C U E I L -->
+<!--[X] S E C T I O N S [1]-->
 
 <!-- G A L E R I E-->
 <div class="section section-2" id="Galerie">
@@ -253,7 +248,7 @@
         </div>
     </div>
 </div>
-<!--/ G A L E R I E-->
+<!--[X] G A L E R I E-->
 
 <!-- E X P O S-->
     <div class="section section-2" id="Expos">
@@ -276,11 +271,9 @@
         </div>
    </div>
    </div>
-<!--/ E X P O S-->
+<!--[X] E X P O S-->
 
 <!-- E V E N T-->
-
-
 <!-- Produit 1 -->
 <div class="section section-3" id="Evenements">
     
@@ -402,31 +395,47 @@
         <!--  Fin product image  -->
     
 </div>
-<!--/ E V E N T-->
+<!--[X] E V E N T-->
 
+<!-- L I E U -->
     <div class="section section-4" id="Lieu">
-        <h2>Lieu</h2>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="images/7.jpg"></div>
+                    <div class="swiper-slide"><img src="images/6.jpg"></div>
+                    <div class="swiper-slide"><img src="images/5.jpg"></div>
+                    <div class="swiper-slide"><img src="images/2.jpg"></div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+        </div> 
    </div>
+<!--[X] L I E U -->
 
 <!-- C O N T A C T -->
     <div class="section section-5" id="Contact">
 
 <!--F O R M -->
+<h2>Réservation</h2>
 <form action="traitement.php" method="post">
     <label for="nom">Nom :</label><br>
     <input type="text" id="nom" name="nom"><br>
     <label for="prenom">Prénom :</label><br>
     <input type="text" id="prenom" name="prenom"><br>
     <label for="nombre">Nombre de personnes :</label><br>
-    <input type="number" id="nombre" name="nombre"><br>
+    <input type="number" id="nombre" min="1" name="nombre" required><br>
     <label for="date">Date de l'événement :</label><br>
-    <select id="date" name="date">
+    <select id="date" name="date" required>
     <option value="vendredi">Vendredi 20h</option>
     <option value="samedi">Samedi 20h</option>
     </select><br>
+    <label for="vip">Option VIP</label>
+    <input type="checkbox" id="vip" value="vip"><br>
     <input type="submit" value="Envoyer">
 </form> 
-<!--/ F O R M -->
+<!--[X] F O R M -->
 
     <div id="containerContact">
         <!-- FACEBOOK + LIEN -->
@@ -447,15 +456,16 @@
             <i class="fa-brands fa-instagram icons instagram"></i>  
         </a>
     </div>
-<!--/ C O N T A C T -->
+<!--[X] C O N T A C T -->
 
 <!-- M A P -->
 <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=..."></iframe>
   </div>
-   
+<!--[X] M A P -->   
+
 </body>
-<!--/ S E C T I O N S-->
+<!--[X] S E C T I O N S-->
 
 <footer>
 
