--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <!-- S E C T I O N S [1]-->
 <!-- A C C U E I L -->
     <div class="section section-1" id="Accueil">
-        <div class="container-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WBwNw4WjV7g" 
+        <div class="container-video" style="width: 100%; height: 100%;">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
