ajout du clic pour afficher les formulaire (incomplet)

--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
         <!-- Boutton Réserver-->
             <span class="buy">Réserver</span>
          </button>
+         <form class="reservation-form">
+            <!-- votre formulaire ici -->
+          </form>
             <!-- Fin Button Réservé --> 
         </div>             
         </div>
@@ -481,6 +484,9 @@
 <!--FILTER -->
 <script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
 <script src="js/filterGallery.js"></script>
+
+<!--FORMULAIRE -->
+<script src="js/formulaire.js"></script>
 
 <!-- Expo Selector JS -->
 <script src="js/expoSelector.js"></script>
