--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
 <!-- S E C T I O N S [1]-->
 <!-- A C C U E I L -->
-    <div class="section section-1" id="Accueil">
-        <div class="container-video" style="width: 100%; height: 100%;">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-          </iframe>
-        </div>
-    </div> 
+<div class="section section-1" id="Accueil">
+    <div class="container-video" style="width: 100%; height: 100%;">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g?loop=1&mute=1&autoplay=1"
+              title="YouTube video player" frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+      </iframe>
+    </div>
+  </div>
 <!--[X] A C C U E I L -->
 <!--[X] S E C T I O N S [1]-->
 
