--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- A C C U E I L -->
 <div class="section section-1" id="Accueil">
     <div class="container-video" style="width: 100%; height: 100%;">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g?loop=1&mute=1&autoplay=1"
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g?loop=1&mute=1&autoplay=1&controls=0&showinfo=0"
               title="YouTube video player" frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
               allowfullscreen>
