arangement map + contact

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <!-- Début Product details -->
             <div class="product-details"> 
                 <!-- Product Name -->
-            <h1>Salle 1</h1>  
+            <h1>Titre de l'événement 1</h1>  
         <!-- Les informations importantes -->
                 <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
@@ -328,7 +328,7 @@
         <!-- Début Product details -->
             <div class="product-details"> 
                 <!-- Product Name -->
-            <h1>Salle 2</h1>  
+            <h1>Titre de l'événement 2</h1>  
         <!-- Les informations importantes -->
                 <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
@@ -367,7 +367,7 @@
         <!-- Début Product details -->
             <div class="product-details"> 
                 <!-- Product Name -->
-            <h1>Salle 3</h1>  
+            <h1>Titre de l'événement 3</h1>  
         <!-- Les informations importantes -->
                 <p class="information">Description principale de l'oeuvre</p>      
         <!-- Control -->
@@ -430,8 +430,9 @@
     <div class="section section-5" id="Contact">
 
 <!--F O R M -->
-<h2>Réservation</h2>
+
 <form action="traitement.php" method="post">
+    <h2>Réservation</h2>
     <label for="nom">Nom :</label><br>
     <input type="text" id="nom" name="nom"><br>
     <label for="prenom">Prénom :</label><br>
@@ -448,6 +449,11 @@
     <input type="submit" value="Envoyer">
 </form> 
 <!--[X] F O R M -->
+<!-- M A P -->
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=..."></iframe>
+  </div>
+<!--[X] M A P -->   
 
     <div id="containerContact">
         <!-- FACEBOOK + LIEN -->
@@ -471,11 +477,7 @@
 <!--[X] C O N T A C T -->
 
 
-<!-- M A P -->
-<div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=..."></iframe>
-  </div>
-<!--[X] M A P -->   
+
 
 </body>
 <!--[X] S E C T I O N S [6]-->
