id Contact au clic pour réserver

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <!-- Le prix -->
             <span class="price">49€</span>
         <!-- Boutton Réserver-->
-            <span class="buy">Réserver</span>
+        <span class="buy"><a href="#Contact">Réserver</a></span>
          </button>
          <form class="reservation-form">
             <!-- votre formulaire ici -->
@@ -338,7 +338,7 @@
         <!-- Le prix -->
             <span class="price">12€</span>
         <!-- Boutton Réserver-->
-            <span class="buy">Réserver</span>
+            <span class="buy"><a href="#Contact">Réserver</a></span>
          </button>
             <!-- Fin Button Réservé --> 
         </div>             
@@ -377,7 +377,7 @@
         <!-- Le prix -->
             <span class="price">80€</span>
         <!-- Boutton Réserver-->
-            <span class="buy">Réserver</span>
+            <span class="buy"><a href="#Contact">Réserver</a></span>
          </button>
             <!-- Fin Button Réservé --> 
         </div>             
