ajout du panier

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
               <li><a href="#Evenements">Evénements</a></li>
               <li><a href="#Lieu">Le lieu</a></li>
               <li><a href="#Contact">Contact</a></li>
+              <div class="basket-color">
+                  <li><i class="fa-solid fa-basket-shopping"></i></li>
+              </div>
             </ul>
           </nav>
     </header> 
