--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 <!--[X] F O R M -->
 <!-- M A P -->
 <div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=..."></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2639.497907714958!2d7.7414345!3d48.5811646!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4796c84c97245fc9%3A0x4de1edbd539dce93!2s6%20Rue%20des%20Moulins%2C%2067000%20Strasbourg%2C%20France!5e0!3m2!1sfr!2sus!4v1671782148768!5m2!1sfr!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 <!--[X] M A P -->   
 
