--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <!-- S E C T I O N S [1]-->
 <!-- A C C U E I L -->
 <div class="section section-1" id="Accueil">
+    <div class="text-video"><h2>Le Lez'art</h2></div>
     <div class="container-video" style="width: 100%; height: 100%;">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g?loop=1&playlist=WBwNw4WjV7g&mute=1&autoplay=1&controls=0&showinfo=0"
               title="YouTube video player" frameborder="0" 
