ajout des images de salles, et le texte

--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
 <!-- S E C T I O N S [1]-->
 <!-- A C C U E I L -->
 <div class="section section-1" id="Accueil">
-    <div class="text-video"><h2>Le Lez'art</h2></div>
+    <!-- Conteneur pour le texte -->
+    <div class="text-video">
+      <!-- Titre -->
+      <h2>Le Lez'art</h2>
+    </div>
+  
+    <!-- Conteneur pour la vidéo -->
     <div class="container-video" style="width: 100%; height: 100%;">
+      <!-- Iframe pour la vidéo -->
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WBwNw4WjV7g?loop=1&playlist=WBwNw4WjV7g&mute=1&autoplay=1&controls=0&showinfo=0"
               title="YouTube video player" frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -412,20 +419,31 @@
 
 <!-- S E C T I O N S [5]-->
 <!-- L I E U -->
-    <div class="section section-4" id="Lieu">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/7.jpg"></div>
-                    <div class="swiper-slide"><img src="images/6.jpg"></div>
-                    <div class="swiper-slide"><img src="images/5.jpg"></div>
-                    <div class="swiper-slide"><img src="images/2.jpg"></div>
-                    </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
-                </div>
-        </div> 
-   </div>
+<div class="section section-4" id="Lieu">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="images/s1.jpg">
+          <p>Salle 1</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="images/s2.jpg">
+          <p>Salle 2</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="images/s3.jpg">
+          <p>Salle 3</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="images/s4.jpg">
+          <p>Salle 4</p>
+        </div>
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
 <!--[X] L I E U -->
 <!--[X] S E C T I O N S [5]-->
 
@@ -459,6 +477,13 @@
   </div>
 <!--[X] M A P -->   
 
+
+<!--[X] C O N T A C T -->
+
+</body>
+<!--[X] S E C T I O N S [6]-->
+
+<footer>
     <div id="containerContact">
         <!-- FACEBOOK + LIEN -->
         <a href="https://facebook.com" target="_blank" class="s3d facebook">
@@ -478,15 +503,6 @@
             <i class="fa-brands fa-instagram icons instagram"></i>  
         </a>
     </div>
-<!--[X] C O N T A C T -->
-
-
-
-
-</body>
-<!--[X] S E C T I O N S [6]-->
-
-<footer>
 <!--FILTER -->
 <script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
 <script src="js/filterGallery.js"></script>
